# FR3Py

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  draft.ipynb  fr3py.sh  host_lcm_test.ipynb  lcm.ipynb  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
FR3Py/: __init__.py  cameras.py  control_utils.py  interfaces.py  joysticks.py  lcm_bridges.py  trackers.py  utils.py
FR3Py/assets/mujoco/: april_tag.urdf  cabinet_assets.xml  cabinet_body.xml  cabinet_default.xml  fr3.xml  fr3_body.xml  fr3_crude.urdf  fr3_default.xml  fr3_hand_crude.urdf  fr3_on_table.xml  fr3_on_table_body.xml  fr3_on_table_with_bounding_boxes.xml  fr3_on_table_with_bounding_boxes_body.xml  fr3_on_table_with_bounding_boxes_wiping.xml  fr3_on_table_with_bounding_boxes_wiping_body.xml  fr3_with_block.xml  fr3_with_bounding_boxes.urdf  fr3_with_camera.urdf  fr3_with_camera_and_bounding_boxes.urdf  fr3_with_collision_table.xml  table_body_friction.xml  table_body_friction_offset.xml
FR3Py/assets/urdf/: fr3.urdf  fr3_link5_2_crude.urdf  fr3_link6_crude.urdf  sphere.urdf
FR3Py/calibration/: utils.py
FR3Py/controllers/: differential_ik.py  jacobianPseudoInv.py  solvers.py  utils.py  waypoint_controller.py
FR3Py/data/: fr3_link5_1_crude.urdf  fr3_link7_crude.urdf
FR3Py/envs/: pybullet.py
FR3Py/lcm_msgs/: README.md  fr3_commands.lcm  fr3_states.lcm
FR3Py/lcm_msgs/fr3_commands/: __init__.py  fr3_cmd.hpp  fr3_cmd.py
FR3Py/lcm_msgs/fr3_states/: __init__.py  fr3_state.hpp  fr3_state.py
FR3Py/robot/: interface.py  model.py  model_collision_avoidance.py  vision.py
FR3Py/robots/: fr3.urdf  fr3_link3_crude.urdf  fr3_link4_crude.urdf
FR3Py/sim/: interface.py  isaacsim_node.py  lcm_bridges.py  mujoco.py  mujoco_with_contact.py  pybullet.py  utils.py
FR3Py/sim/isaac/: fr3.py  isaacsim_node.py  sim_config.yaml  utils.py
FR3Py/vision/: cameras.py  kinect.py  trackers.py  utils.py
data/: moving_board_data.pickle
docs/assets/: openfig.drawio
docs/source/: conf.py  index.md
docs/source/tutorial/: dg_head.md  index.md  install.md  minimal.md
examples/: 00-mujoco-sim.ipynb  01-joint-interface.ipynb  02-pick-n-place.ipynb  apriltag.ipynb  apriltag_tracker.ipynb  curobo-demo.ipynb  eye_on_base_calibration.ipynb  isaacsim_interface.ipynb  isaacsim_simple_example.ipynb  isaacsim_tutorial.ipynb  jacobian_pseudo_inv_controller .ipynb  jacobian_pseudo_inv_controller_backup.ipynb  joystick_control.ipynb  kinect_example.ipynb  mujoco_test.ipynb  nerf_data_collector.ipynb  nerf_exp_signle_arm.ipynb  pointcloud_alignment_example.ipynb  posed_image_dataset_collection_real.ipynb  robot_interface.ipynb  robot_interface_tutorial.ipynb  taskspace_force_control.ipynb  unicast_config.py
examples/sample_datasets/eye_on_base_calibration/apr24/: camera_params.pkl  pose.csv
examples/sample_datasets/eye_on_base_calibration/apr27/: camera_params.pkl  pose.csv
fr3_bridge/: CMakeLists.txt
fr3_bridge/include/lcm_msgs/fr3_commands/: fr3_cmd.hpp
fr3_bridge/include/lcm_msgs/fr3_states/: fr3_state.hpp
fr3_bridge/src/: CMakeLists.txt
fr3_bridge/src/fr3_joint_interface/: fr3_joint_interface.cpp
fr3_bridge/src/fr3_joint_velocity/: fr3_joint_velocity.cpp
fr3_gripper/: CMakeLists.txt  README.md  demo.py  setup.py
fr3_gripper/src/: gripper.cpp
include/: franka_trajectory_utils.hpp  ipc_trigger_t.hpp
include/lcm_msgs/: README.md
lcm_msgs/: fr3_commands.lcm  fr3_states.lcm
lcm_msgs/fr3_commands/: __init__.py  fr3_cmd.hpp  fr3_cmd.py
lcm_msgs/fr3_states/: __init__.py  fr3_state.hpp  fr3_state.py
src/: CMakeLists.txt  franka_trajectory_utils.cpp
src/fr3_joint_torque/: fr3_joint_torque.cpp
src/fr3_joint_velocity/: fr3_joint_velocity.cpp
src/fr3_task_velocity/: fr3_task_velocity.cpp
(+1 files in other folders)
