[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dgm_franka"
authors = [
    {name = "Rooholla Khorrambakht"}, 
    {name = "Bolun Dai", email = "daibolun19950216@gmail.com"}
]
dynamic = ["version", "description"]

[project.optional-dependencies]
doc = [
    "sphinx~=4.2.0",
    "myst-parser",
    "furo",
    "nbsphinx",
    "sphinx_book_theme",
    "sphinx-autobuild",
    "sphinx_design"
]