[metadata]
name = FR3Py
version = 1.0.0
description = Unified Python simulation and hardware communication environment for Franka FR3 robot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Rooholla-KhorramBakht/FR3Py
author = Rooholla Khorrambakht, Bolun Dai
author_email = rk4342@nyu.edu, bd1555@nyu.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True
install_requires =
    numpy>=1.22.3
    pyzmq>=25.0.0
    pyyaml>=5.3.1
    pin==2.6.18
    proxsuite==0.3.7
    pyrealsense2
